Add akka dependencies

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,4 +3,5 @@ api.address=jsonplaceholder.typicode.com
 api.endpoint=posts
 download.maxposts=100
 download.directory=downloadedPosts
-log.directory=logv
+download.overwrite=true
+log.directory=log
