--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,11 @@ shadowJar {
 dependencies {
     compile 'org.scala-lang:scala-library:2.11.8'
     compile group: 'com.typesafe', name: 'config', version: '1.4.0'
+    compile group: 'com.typesafe.akka', name: 'akka-http_2.11', version: '10.1.11'
+    compile group: 'com.typesafe.akka', name: 'akka-actor_2.11', version: '2.5.26'
+    compile group: 'com.typesafe.akka', name: 'akka-stream_2.11', version: '2.5.26'
+    compile group: 'com.typesafe.akka', name: 'akka-http-spray-json_2.11', version: '10.1.11'
+
     testCompile 'org.scalatest:scalatest_2.11:3.0.4'
     testRuntime 'org.pegdown:pegdown:1.4.2'
     testRuntime 'org.scala-lang.modules:scala-xml_2.11:1.0.6'
