--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ dependencies {
     compile group: 'com.typesafe.akka', name: 'akka-actor_2.11', version: '2.5.26'
     compile group: 'com.typesafe.akka', name: 'akka-stream_2.11', version: '2.5.26'
     compile group: 'com.typesafe.akka', name: 'akka-http-spray-json_2.11', version: '10.1.11'
-
+    compile group: 'com.typesafe.scala-logging', name: 'scala-logging_2.11', version: '3.9.2'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.2'
     testCompile 'org.scalatest:scalatest_2.11:3.0.4'
     testRuntime 'org.pegdown:pegdown:1.4.2'
     testRuntime 'org.scala-lang.modules:scala-xml_2.11:1.0.6'
